# mesh-chat

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
mesh/: __init__.py  cli.py  console.py  node.py  protocol.py
tests/: __init__.py  test_addressed.py  test_node.py  test_protocol.py  test_ttl.py
